syntax = "proto3";

package com.almeidavc.grpcbackend;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

option java_multiple_files = true;
option java_package = "com.almeidavc.grpcbackend.lib";

service PatientService {
    rpc CreatePatient(CreatePatientRequest) returns (Patient);
    rpc UpdatePatient(UpdatePatientRequest) returns (Patient);
    rpc DeletePatient(DeletePatientRequest) returns (google.protobuf.Empty);
}

message Patient {
    int64 id = 1;
    string first_name = 2;
    string last_name = 3;
    string medical_condition = 4;
}

message CreatePatientRequest {
    string patient_first_name = 1;
    string patient_last_name = 2;
    string patient_medical_condition = 3;
}

message UpdatePatientRequest {
    Patient patient = 1;
    google.protobuf.FieldMask update_mask = 2;
}

message DeletePatientRequest {
    int64 patient_id = 1;
}

